<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">板橋高中午餐系統</string>
    <string name="chinese_name">午餐系統</string>
    <string name="username">帳號</string>
    <string name="password">密碼</string>
    <string name="rem_pass">記住密碼</string>
    <string name="input_help_account">
        帳號(ex. 12210089)
    </string>
    <string name="input_help_password">
        密碼預設為生日(ex. 940423)
    </string>
    <string name="welcome_title">
        歡迎使用午餐系統，\n$name.
    </string>
    <string name="balance_title" tools:ignore="TypographyDashes">
        卡號：000000\n餘額：--元（非即時）\n2023/01/01 00:00:00
    </string>
    <string name="login_text">登入</string>
    <string name="title_activity_student_main">StudentMainActivity</string>
    <string name="stu_title_order">點餐</string>
    <string name="stu_title_history">檢視訂單</string>
    <string name="stu_title_more">更多功能</string>
    <string name="priceString">%01s$</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="taiwan">台灣小吃部</string>
    <string name="aiJia">愛佳便當</string>
    <string name="cafe">合作社</string>
    <string name="GuanDon">關東煮</string>
    <string name="blank">blank</string>
    <string name="remPW">以帳號登入</string>
    <string name="chgPW">更新密碼</string>
    <string name="checkWeb">檢視網頁版</string>
    <string name="devThank">開發者致謝</string>
    <string name="appInfo">關於此程式</string>
    <string name="oldPW">請輸入舊密碼</string>
    <string name="newPW1">請輸入新密碼</string>
    <string name="newPW2">請再輸入一次新密碼</string>
    <string name="confirmChg">確定更換</string>
    <string name="title_activity_website">WebsiteActivity</string>
    <string name="time1100">11:00</string>
    <string name="time1200">12:00</string>
    <string name="info">詳細</string>
    <string name="send">送出</string>
    <string name="cancel">取消</string>
    <string name="reload">重新整理</string>
    <string name="showBarcode">顯示付款條碼</string>
    <string name="default_notification_channel_id">DinnerSystem_channel_id</string>
    <string name="default_notification_channel_name">DinnerSystem_channel_name</string>
    <string name="foodPolicies">新北市立板橋高中午餐供應異常處理流程</string>
    <string name="choose">選擇</string>
    <string name="confirmOrder">確認餐點</string>
    <string name="sendOrder">送出訂單</string>
</resources>
