<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/pureWhite"
        tools:context=".MainMoreActivity">

    <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.498">

        <Button
                android:id="@+id/chgPass"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:onClick="chgPass"
                android:text="@string/chgPW" />

        <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:contentDescription="@string/blank"
                app:srcCompat="@android:color/transparent" />

        <Button
                android:id="@+id/checkWeb"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:onClick="webVer"
                android:text="@string/checkWeb" />

        <ImageView
                android:id="@+id/imageView8"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:contentDescription="@string/blank"
                app:srcCompat="@android:color/transparent" />

        <Button
                android:id="@+id/devThank"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:onClick="devThank"
                android:text="@string/appInfo" />

        <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:contentDescription="@string/blank"
                app:srcCompat="@android:color/transparent" />

        <Button
                android:id="@+id/foodPolicies"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:onClick="foodPolicies"
                android:text="@string/foodPolicies" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>