<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".StudentMainActivity">

    <Button
            android:text="@string/stu_title_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/order_button" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>
    <Button
            android:text="@string/stu_title_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/history_button" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/order_button"/>
    <Button
            android:text="@string/stu_title_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/more_button" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/history_button"/>
</android.support.constraint.ConstraintLayout>