<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/pureWhite"
        tools:context=".ChangePasswordActivity">

    <EditText
            android:id="@+id/oldPWText"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginStart="43dp"
            android:layout_marginTop="193dp"
            android:background="#C1C1C1"
            android:ems="10"
            android:hint="@string/oldPW"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:singleLine="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <EditText
            android:id="@+id/newPWText"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="30dp"
            android:background="#C1C1C1"
            android:ems="10"
            android:hint="@string/newPW1"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:singleLine="true"
            app:layout_constraintStart_toStartOf="@+id/oldPWText"
            app:layout_constraintTop_toBottomOf="@+id/oldPWText" />

    <EditText
            android:id="@+id/newPW2Text"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="30dp"
            android:background="#C1C1C1"
            android:ems="10"
            android:hint="@string/newPW2"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:singleLine="true"
            app:layout_constraintStart_toStartOf="@+id/newPWText"
            app:layout_constraintTop_toBottomOf="@+id/newPWText" />

    <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:onClick="chgPW"
            android:text="@string/confirmChg"
            app:layout_constraintStart_toEndOf="@+id/newPW2Text"
            app:layout_constraintTop_toTopOf="@+id/newPW2Text" />
</androidx.constraintlayout.widget.ConstraintLayout>