<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <EditText
            android:layout_width="189dp"
            android:layout_height="42dp"
            android:inputType="text|textPersonName"
            android:ems="10"
            android:id="@+id/username" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="112dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="54dp" android:layout_marginBottom="357dp"
            app:layout_constraintBottom_toBottomOf="parent" android:hint="@string/username"
            android:importantForAutofill="no"/>
    <EditText
            android:layout_width="188dp"
            android:layout_height="42dp"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/password"
            app:layout_constraintStart_toStartOf="@+id/username" app:layout_constraintEnd_toEndOf="@+id/username"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/username"
            android:layout_marginBottom="307dp" app:layout_constraintBottom_toBottomOf="parent"
            android:importantForAutofill="no" android:hint="@string/password"/>
    <TextView
            android:text="@string/input_help"
            android:layout_width="208dp"
            android:layout_height="43dp"
            android:id="@+id/textView" android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/password" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="35dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="234dp" app:layout_constraintEnd_toEndOf="@+id/password"
    />
    <Button
            android:text="@string/login_text"
            android:layout_width="75dp"
            android:layout_height="54dp"
            android:id="@+id/loginButton" app:layout_constraintStart_toEndOf="@+id/username"
            android:layout_marginStart="33dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="89dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="33dp"
            android:layout_marginBottom="351dp" app:layout_constraintBottom_toBottomOf="parent"
    />
    <Switch
            android:text="@string/rem_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/remSwitch"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="307dp"
            app:layout_constraintEnd_toEndOf="@+id/loginButton" android:layout_marginStart="26dp"
            app:layout_constraintStart_toEndOf="@+id/password" android:layout_marginTop="18dp"
            app:layout_constraintTop_toBottomOf="@+id/loginButton"/>
</android.support.constraint.ConstraintLayout>